@@ -1,5 +1,16 @@
 systemd System and Service Manager
 
+CHANGES WITH 260:
+
+        Feature Removals and Incompatible Changes:
+
+        * systemd-repart will now make use of mkfs.xfs's support from
+          populating XFS filesystems from a directory. This support was
+          added in xfsprogs 6.17.0 released 20 October 2025. As there is no
+          proper way to detect whether mkfs.xfs supports the new directory
+          population or not, we make use of it unconditionally and have dropped
+          support for the old way using protofiles.
+
 CHANGES WITH 259:
 
         Announcements of Future Feature Removals and Incompatible Changes:
